# Simple2D

./: .gitignore  .gitmodules  CMakeLists.txt
example/: Debug.cpp  Debug.h  Entitys.cpp  Entitys.h  GameManager.cpp  GameManager.h  main.cpp
src/: GameState.cpp  GameState.h
src/Audio/: AudioManager.cpp  AudioManager.h  WavFile.cpp  WavFile.h
src/Graphics/: Renderables.cpp  Renderables.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h
src/Physics/: Physics.cpp  Physics.h
src/Util/: Assets.cpp  Assets.h  Math.h  Utility.h
